Complete nft card preview challenge.

--- a/index.html
+++ b/index.html
@@ -3,45 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet"> 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">  
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
 <body>
 
   <main class="main">
     <section class="container-card">
       <figure class="figure-card">
-        <img class="figure-card__img" src="" alt="">
+        <img class="figure-card__img" src="/images/image-equilibrium.jpg" alt="">
       </figure>
       <div class="container-text1">
         <h1 class="container-text1__tittle">Equilibrium #3429</h1>        
         <p class="container-text1__description">Our Equilibrium collection promotes balance and calm.</p>        
       </div>
       <div class="container-text2">
-        <p class="container-text2__eth-count"><span>0.041 ETH</span></p>
-        <p class="container-text2__days-count"><span>3 days left</span></p>        
+        <p class="container-text2__eth-count"><span></span>0.041 ETH</p>
+        <p class="container-text2__days-count"><span></span>3 days left</p>        
       </div>
-      <div>
-        <span></span><p>Creation of Jules Wyvern</p>        
+      <div class="container-creator">
+        <span class="container-creator__img-avatar"></span><p class="container-creator__text">Creation of </p><p class="container-creator__name"> Jules Wyvern</p>        
       </div>
     </section>
 
+    
   </main>
-
-
-  
-
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Jose Aguilar</a>.
   </div>
+
+
+  
+
 </body>
 </html>
